code/dotnet/ProcuretoPayInvoiceandBilling/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay: Invoice and Billing client library for .NET

[![API Version](https://img.shields.io/badge/api-v1K-blue)]()
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.ProcuretoPayInvoiceandBilling)](https://www.nuget.org/packages/FactSet.SDK.ProcuretoPayInvoiceandBilling)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

API endpoints for managing and downloading FactSet Invoices

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1K
- SDK version: 0.1.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.ProcuretoPayInvoiceandBilling -v 0.1.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.ProcuretoPayInvoiceandBilling -Version 0.1.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.ProcuretoPayInvoiceandBilling.Api;
using FactSet.SDK.ProcuretoPayInvoiceandBilling.Client;
using FactSet.SDK.ProcuretoPayInvoiceandBilling.Model;

namespace Example
{
    public static class GetFitsReportGetExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.ProcuretoPayInvoiceandBilling.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new InvoiceAndBillingApi(config);
            var fitsID = "AB2C2101";  // string | FITSID can be determined by concatenating the AccountNumber + two-digit year (e.g 21 for 2021) and two-digit month (e.g. 01 for January). Available AccountNumbers are available from the /listInvoices endpoint.

            try
            {
                // Returns Fits report by given FITSID
                List<Object> result = apiInstance.GetFitsReportGet(fitsID);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling InvoiceAndBillingApi.GetFitsReportGet: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com/procuretopay/invoice-and-billing*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*InvoiceAndBillingApi* | [**GetFitsReportGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#getfitsreportget) | **GET** /getFitsReport | Returns Fits report by given FITSID
*InvoiceAndBillingApi* | [**GetInvoiceGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#getinvoiceget) | **GET** /getInvoice | Returns PDF of specific invoice
*InvoiceAndBillingApi* | [**InvoiceDetailsGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#invoicedetailsget) | **GET** /invoiceDetails | Returns details on specific invoice.
*InvoiceAndBillingApi* | [**ListInvoicesGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceAndBillingApi.md#listinvoicesget) | **GET** /listInvoices | Returns all available invoices


## Documentation for Models

 - [Model.InvoiceDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetails.md)
 - [Model.InvoiceDetailsBillingAdjustments](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsBillingAdjustments.md)
 - [Model.InvoiceDetailsNonRecurringDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsNonRecurringDetails.md)
 - [Model.InvoiceDetailsServiceDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsServiceDetails.md)
 - [Model.InvoiceDetailsServiceDetailsExchangeFees](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsServiceDetailsExchangeFees.md)
 - [Model.InvoiceDetailsStatementofAccountDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsStatementofAccountDetails.md)
 - [Model.InvoiceDetailsSubscriptionChanges](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsSubscriptionChanges.md)
 - [Model.InvoiceDetailsSubscriptionChangesExchanges](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsSubscriptionChangesExchanges.md)
 - [Model.InvoiceDetailsTaxDetails](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v1/docs/InvoiceDetailsTaxDetails.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
