code/dotnet/ProcuretoPayInvoiceandBilling/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay: Invoice and Billing client library for .NET

[![API Version](https://img.shields.io/badge/api-v2.0.0-blue)](https://developer.factset.com/api-catalog/invoice-and-billing)
[![Nuget](https://img.shields.io/badge/nuget-v0.2.0-orange)](https://www.nuget.org/packages/FactSet.SDK.ProcuretoPayInvoiceandBilling/0.2.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

API for retrieving invoice details

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.0
- SDK version: 0.2.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.ProcuretoPayInvoiceandBilling -v 0.2.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.ProcuretoPayInvoiceandBilling -Version 0.2.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.ProcuretoPayInvoiceandBilling.Api;
using FactSet.SDK.ProcuretoPayInvoiceandBilling.Client;
using FactSet.SDK.ProcuretoPayInvoiceandBilling.Model;

namespace Example
{
    public static class DownloadInvoiceExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.ProcuretoPayInvoiceandBilling.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new InvoiceAndBillingApi(config);
            var id = "AB2C2503";  // string | Concatenation of AccountID and Date as YYMM

            try
            {
                // Get a PDF of the provided invoiceId
                System.IO.Stream result = apiInstance.DownloadInvoice(id);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling InvoiceAndBillingApi.DownloadInvoice: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/procure-to-pay/invoice-and-billing/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*InvoiceAndBillingApi* | [**DownloadInvoice**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#downloadinvoice) | **GET** /invoices/{id}/download | Get a PDF of the provided invoiceId
*InvoiceAndBillingApi* | [**FitsReport**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#fitsreport) | **GET** /invoices/{id}/fits-report | Get FITS report
*InvoiceAndBillingApi* | [**InvoiceDetails**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#invoicedetails) | **GET** /invoices/{id} | Get invoice details
*InvoiceAndBillingApi* | [**ListAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceAndBillingApi.md#listaccounts) | **GET** /accounts | Returns a list of available accounts


## Documentation for Models

 - [Model.AccountDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/AccountDetail.md)
 - [Model.Accounts](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/Accounts.md)
 - [Model.BillingAddress](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/BillingAddress.md)
 - [Model.BillingAdjustment](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/BillingAdjustment.md)
 - [Model.ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/ErrorObject.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/ErrorResponse.md)
 - [Model.Invoice](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/Invoice.md)
 - [Model.InvoiceData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/InvoiceData.md)
 - [Model.Product](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/Product.md)
 - [Model.ProductDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/ProductDetail.md)
 - [Model.ProductGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/ProductGroup.md)
 - [Model.ProductGroups](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/ProductGroups.md)
 - [Model.ServiceDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/ServiceDetail.md)
 - [Model.StatementOfAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/StatementOfAccount.md)
 - [Model.SubscriptionChange](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/SubscriptionChange.md)
 - [Model.TaxDetail](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/ProcuretoPayInvoiceandBilling/v2/docs/TaxDetail.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
